y.output
Terminaux inutilisés dans la grammaire

    DOT
    ARR


Grammaire

    0 $accept: prog $end

    1 prog: glob_decl_list

    2 glob_decl_list: glob_var_list glob_fun_list

    3 glob_var_list: glob_var_list decl PV
    4              | ε

    5 glob_fun_list: glob_fun_list fun
    6              | fun

    7 fun: type fun_head fun_body

    8 po: PO

    9 fun_head: ID po PF
   10         | ID po params PF

   11 params: type ID vir params
   12       | type ID

   13 vir: VIR

   14 fun_body: fao block faf

   15 fao: AO

   16 faf: AF

   17 @1: ε

   18 block: @1 decl_list inst_list

   19 decl_list: decl_list decl PV
   20          | ε

   21 decl: var_decl

   22 var_decl: type vlist

   23 vlist: vlist vir ID
   24      | ID

   25 type: typename

   26 typename: INT
   27         | FLOAT
   28         | VOID

   29 inst_list: inst_list inst
   30          | inst

   31 pv: PV

   32 inst: ao block af
   33     | exp pv
   34     | aff pv
   35     | ret pv
   36     | cond
   37     | loop
   38     | pv

   39 ao: AO

   40 af: AF

   41 aff: ID EQ exp

   42 ret: RETURN exp
   43    | RETURN PO PF

   44 $@2: ε

   45 cond: if bool_cond $@2 inst elsop

   46 $@3: ε

   47 elsop: else $@3 inst
   48      | ε

   49 bool_cond: PO exp PF

   50 if: IF

   51 else: ELSE

   52 $@4: ε

   53 loop: while while_cond $@4 inst

   54 while_cond: PO exp PF

   55 while: WHILE

   56 exp: MOINS exp
   57    | exp PLUS exp
   58    | exp MOINS exp
   59    | exp STAR exp
   60    | exp DIV exp
   61    | PO exp PF
   62    | ID
   63    | app
   64    | NUM
   65    | DEC
   66    | NOT exp
   67    | exp INF exp
   68    | exp SUP exp
   69    | exp EQUAL exp
   70    | exp DIFF exp
   71    | exp AND exp
   72    | exp OR exp

   73 app: fid PO args PF

   74 fid: ID

   75 args: arglist
   76     | ε

   77 arglist: arglist VIR exp
   78        | exp


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    NUM <int_value> (258) 64
    DEC <float_value> (259) 65
    INT (260) 26
    FLOAT (261) 27
    VOID (262) 28
    ID <string_value> (263) 9 10 11 12 23 24 41 62 74
    AO (264) 15 39
    AF (265) 16 40
    PO (266) 8 43 49 54 61 73
    PF (267) 9 10 43 49 54 61 73
    PV (268) 3 19 31
    VIR (269) 13 77
    RETURN (270) 42 43
    EQ (271) 41
    IF <label_value> (272) 50
    ELSE <label_value> (273) 51
    WHILE <label_value> (274) 55
    AND <label_value> (275) 71
    OR <label_value> (276) 72
    NOT <label_value> (277) 66
    DIFF <label_value> (278) 70
    EQUAL <label_value> (279) 69
    SUP <label_value> (280) 68
    INF <label_value> (281) 67
    PLUS (282) 57
    MOINS (283) 56 58
    STAR (284) 59
    DIV (285) 60
    DOT (286)
    ARR (287)
    IFX (288)
    UNA (289)


Non-terminaux, suivis des règles où ils apparaissent

    $accept (35)
        à gauche: 0
    prog (36)
        à gauche: 1
        à droite: 0
    glob_decl_list (37)
        à gauche: 2
        à droite: 1
    glob_var_list (38)
        à gauche: 3 4
        à droite: 2 3
    glob_fun_list (39)
        à gauche: 5 6
        à droite: 2 5
    fun (40)
        à gauche: 7
        à droite: 5 6
    po (41)
        à gauche: 8
        à droite: 9 10
    fun_head <string_value> (42)
        à gauche: 9 10
        à droite: 7
    params (43)
        à gauche: 11 12
        à droite: 10 11
    vir (44)
        à gauche: 13
        à droite: 11 23
    fun_body (45)
        à gauche: 14
        à droite: 7
    fao (46)
        à gauche: 15
        à droite: 14
    faf (47)
        à gauche: 16
        à droite: 14
    block (48)
        à gauche: 18
        à droite: 14 32
    @1 (49)
        à gauche: 17
        à droite: 18
    decl_list (50)
        à gauche: 19 20
        à droite: 18 19
    decl (51)
        à gauche: 21
        à droite: 3 19
    var_decl (52)
        à gauche: 22
        à droite: 21
    vlist (53)
        à gauche: 23 24
        à droite: 22 23
    type <type_value> (54)
        à gauche: 25
        à droite: 7 11 12 22
    typename <type_value> (55)
        à gauche: 26 27 28
        à droite: 25
    inst_list (56)
        à gauche: 29 30
        à droite: 18 29
    pv (57)
        à gauche: 31
        à droite: 33 34 35 38
    inst (58)
        à gauche: 32 33 34 35 36 37 38
        à droite: 29 30 45 47 53
    ao (59)
        à gauche: 39
        à droite: 32
    af (60)
        à gauche: 40
        à droite: 32
    aff (61)
        à gauche: 41
        à droite: 34
    ret (62)
        à gauche: 42 43
        à droite: 35
    cond (63)
        à gauche: 45
        à droite: 36
    $@2 (64)
        à gauche: 44
        à droite: 45
    elsop (65)
        à gauche: 47 48
        à droite: 45
    $@3 (66)
        à gauche: 46
        à droite: 47
    bool_cond (67)
        à gauche: 49
        à droite: 45
    if <int_value> (68)
        à gauche: 50
        à droite: 45
    else <int_value> (69)
        à gauche: 51
        à droite: 47
    loop (70)
        à gauche: 53
        à droite: 37
    $@4 (71)
        à gauche: 52
        à droite: 53
    while_cond (72)
        à gauche: 54
        à droite: 53
    while <int_value> (73)
        à gauche: 55
        à droite: 53
    exp <type_value> (74)
        à gauche: 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
        à droite: 33 41 42 49 54 56 57 58 59 60 61 66 67 68 69 70 71 72 77 78
    app (75)
        à gauche: 73
        à droite: 63
    fid (76)
        à gauche: 74
        à droite: 73
    args (77)
        à gauche: 75 76
        à droite: 73
    arglist (78)
        à gauche: 77 78
        à droite: 75 77


État 0

    0 $accept: • prog $end

    $défaut  réduction par utilisation de la règle 4 (glob_var_list)

    prog            aller à l'état 1
    glob_decl_list  aller à l'état 2
    glob_var_list   aller à l'état 3


État 1

    0 $accept: prog • $end

    $end  décalage et aller à l'état 4


État 2

    1 prog: glob_decl_list •

    $défaut  réduction par utilisation de la règle 1 (prog)


État 3

    2 glob_decl_list: glob_var_list • glob_fun_list
    3 glob_var_list: glob_var_list • decl PV

    INT    décalage et aller à l'état 5
    FLOAT  décalage et aller à l'état 6
    VOID   décalage et aller à l'état 7

    glob_fun_list  aller à l'état 8
    fun            aller à l'état 9
    decl           aller à l'état 10
    var_decl       aller à l'état 11
    type           aller à l'état 12
    typename       aller à l'état 13


État 4

    0 $accept: prog $end •

    $défaut  accepter


État 5

   26 typename: INT •

    $défaut  réduction par utilisation de la règle 26 (typename)


État 6

   27 typename: FLOAT •

    $défaut  réduction par utilisation de la règle 27 (typename)


État 7

   28 typename: VOID •

    $défaut  réduction par utilisation de la règle 28 (typename)


État 8

    2 glob_decl_list: glob_var_list glob_fun_list •
    5 glob_fun_list: glob_fun_list • fun

    INT    décalage et aller à l'état 5
    FLOAT  décalage et aller à l'état 6
    VOID   décalage et aller à l'état 7

    $défaut  réduction par utilisation de la règle 2 (glob_decl_list)

    fun       aller à l'état 14
    type      aller à l'état 15
    typename  aller à l'état 13


État 9

    6 glob_fun_list: fun •

    $défaut  réduction par utilisation de la règle 6 (glob_fun_list)


État 10

    3 glob_var_list: glob_var_list decl • PV

    PV  décalage et aller à l'état 16


État 11

   21 decl: var_decl •

    $défaut  réduction par utilisation de la règle 21 (decl)


État 12

    7 fun: type • fun_head fun_body
   22 var_decl: type • vlist

    ID  décalage et aller à l'état 17

    fun_head  aller à l'état 18
    vlist     aller à l'état 19


État 13

   25 type: typename •

    $défaut  réduction par utilisation de la règle 25 (type)


État 14

    5 glob_fun_list: glob_fun_list fun •

    $défaut  réduction par utilisation de la règle 5 (glob_fun_list)


État 15

    7 fun: type • fun_head fun_body

    ID  décalage et aller à l'état 20

    fun_head  aller à l'état 18


État 16

    3 glob_var_list: glob_var_list decl PV •

    $défaut  réduction par utilisation de la règle 3 (glob_var_list)


État 17

    9 fun_head: ID • po PF
   10         | ID • po params PF
   24 vlist: ID •

    PO  décalage et aller à l'état 21

    $défaut  réduction par utilisation de la règle 24 (vlist)

    po  aller à l'état 22


État 18

    7 fun: type fun_head • fun_body

    AO  décalage et aller à l'état 23

    fun_body  aller à l'état 24
    fao       aller à l'état 25


État 19

   22 var_decl: type vlist •
   23 vlist: vlist • vir ID

    VIR  décalage et aller à l'état 26

    $défaut  réduction par utilisation de la règle 22 (var_decl)

    vir  aller à l'état 27


État 20

    9 fun_head: ID • po PF
   10         | ID • po params PF

    PO  décalage et aller à l'état 21

    po  aller à l'état 22


État 21

    8 po: PO •

    $défaut  réduction par utilisation de la règle 8 (po)


État 22

    9 fun_head: ID po • PF
   10         | ID po • params PF

    INT    décalage et aller à l'état 5
    FLOAT  décalage et aller à l'état 6
    VOID   décalage et aller à l'état 7
    PF     décalage et aller à l'état 28

    params    aller à l'état 29
    type      aller à l'état 30
    typename  aller à l'état 13


État 23

   15 fao: AO •

    $défaut  réduction par utilisation de la règle 15 (fao)


État 24

    7 fun: type fun_head fun_body •

    $défaut  réduction par utilisation de la règle 7 (fun)


État 25

   14 fun_body: fao • block faf

    $défaut  réduction par utilisation de la règle 17 (@1)

    block  aller à l'état 31
    @1     aller à l'état 32


État 26

   13 vir: VIR •

    $défaut  réduction par utilisation de la règle 13 (vir)


État 27

   23 vlist: vlist vir • ID

    ID  décalage et aller à l'état 33


État 28

    9 fun_head: ID po PF •

    $défaut  réduction par utilisation de la règle 9 (fun_head)


État 29

   10 fun_head: ID po params • PF

    PF  décalage et aller à l'état 34


État 30

   11 params: type • ID vir params
   12       | type • ID

    ID  décalage et aller à l'état 35


État 31

   14 fun_body: fao block • faf

    AF  décalage et aller à l'état 36

    faf  aller à l'état 37


État 32

   18 block: @1 • decl_list inst_list

    $défaut  réduction par utilisation de la règle 20 (decl_list)

    decl_list  aller à l'état 38


État 33

   23 vlist: vlist vir ID •

    $défaut  réduction par utilisation de la règle 23 (vlist)


État 34

   10 fun_head: ID po params PF •

    $défaut  réduction par utilisation de la règle 10 (fun_head)


État 35

   11 params: type ID • vir params
   12       | type ID •

    VIR  décalage et aller à l'état 26

    $défaut  réduction par utilisation de la règle 12 (params)

    vir  aller à l'état 39


État 36

   16 faf: AF •

    $défaut  réduction par utilisation de la règle 16 (faf)


État 37

   14 fun_body: fao block faf •

    $défaut  réduction par utilisation de la règle 14 (fun_body)


État 38

   18 block: @1 decl_list • inst_list
   19 decl_list: decl_list • decl PV

    NUM     décalage et aller à l'état 40
    DEC     décalage et aller à l'état 41
    INT     décalage et aller à l'état 5
    FLOAT   décalage et aller à l'état 6
    VOID    décalage et aller à l'état 7
    ID      décalage et aller à l'état 42
    AO      décalage et aller à l'état 43
    PO      décalage et aller à l'état 44
    PV      décalage et aller à l'état 45
    RETURN  décalage et aller à l'état 46
    IF      décalage et aller à l'état 47
    WHILE   décalage et aller à l'état 48
    NOT     décalage et aller à l'état 49
    MOINS   décalage et aller à l'état 50

    decl       aller à l'état 51
    var_decl   aller à l'état 11
    type       aller à l'état 52
    typename   aller à l'état 13
    inst_list  aller à l'état 53
    pv         aller à l'état 54
    inst       aller à l'état 55
    ao         aller à l'état 56
    aff        aller à l'état 57
    ret        aller à l'état 58
    cond       aller à l'état 59
    if         aller à l'état 60
    loop       aller à l'état 61
    while      aller à l'état 62
    exp        aller à l'état 63
    app        aller à l'état 64
    fid        aller à l'état 65


État 39

   11 params: type ID vir • params

    INT    décalage et aller à l'état 5
    FLOAT  décalage et aller à l'état 6
    VOID   décalage et aller à l'état 7

    params    aller à l'état 66
    type      aller à l'état 30
    typename  aller à l'état 13


État 40

   64 exp: NUM •

    $défaut  réduction par utilisation de la règle 64 (exp)


État 41

   65 exp: DEC •

    $défaut  réduction par utilisation de la règle 65 (exp)


État 42

   41 aff: ID • EQ exp
   62 exp: ID •
   74 fid: ID •

    EQ  décalage et aller à l'état 67

    PO       réduction par utilisation de la règle 74 (fid)
    $défaut  réduction par utilisation de la règle 62 (exp)


État 43

   39 ao: AO •

    $défaut  réduction par utilisation de la règle 39 (ao)


État 44

   61 exp: PO • exp PF

    NUM    décalage et aller à l'état 40
    DEC    décalage et aller à l'état 41
    ID     décalage et aller à l'état 68
    PO     décalage et aller à l'état 44
    NOT    décalage et aller à l'état 49
    MOINS  décalage et aller à l'état 50

    exp  aller à l'état 69
    app  aller à l'état 64
    fid  aller à l'état 65


État 45

   31 pv: PV •

    $défaut  réduction par utilisation de la règle 31 (pv)


État 46

   42 ret: RETURN • exp
   43    | RETURN • PO PF

    NUM    décalage et aller à l'état 40
    DEC    décalage et aller à l'état 41
    ID     décalage et aller à l'état 68
    PO     décalage et aller à l'état 70
    NOT    décalage et aller à l'état 49
    MOINS  décalage et aller à l'état 50

    exp  aller à l'état 71
    app  aller à l'état 64
    fid  aller à l'état 65


État 47

   50 if: IF •

    $défaut  réduction par utilisation de la règle 50 (if)


État 48

   55 while: WHILE •

    $défaut  réduction par utilisation de la règle 55 (while)


État 49

   66 exp: NOT • exp

    NUM    décalage et aller à l'état 40
    DEC    décalage et aller à l'état 41
    ID     décalage et aller à l'état 68
    PO     décalage et aller à l'état 44
    NOT    décalage et aller à l'état 49
    MOINS  décalage et aller à l'état 50

    exp  aller à l'état 72
    app  aller à l'état 64
    fid  aller à l'état 65


État 50

   56 exp: MOINS • exp

    NUM    décalage et aller à l'état 40
    DEC    décalage et aller à l'état 41
    ID     décalage et aller à l'état 68
    PO     décalage et aller à l'état 44
    NOT    décalage et aller à l'état 49
    MOINS  décalage et aller à l'état 50

    exp  aller à l'état 73
    app  aller à l'état 64
    fid  aller à l'état 65


État 51

   19 decl_list: decl_list decl • PV

    PV  décalage et aller à l'état 74


État 52

   22 var_decl: type • vlist

    ID  décalage et aller à l'état 75

    vlist  aller à l'état 19


État 53

   18 block: @1 decl_list inst_list •
   29 inst_list: inst_list • inst

    NUM     décalage et aller à l'état 40
    DEC     décalage et aller à l'état 41
    ID      décalage et aller à l'état 42
    AO      décalage et aller à l'état 43
    PO      décalage et aller à l'état 44
    PV      décalage et aller à l'état 45
    RETURN  décalage et aller à l'état 46
    IF      décalage et aller à l'état 47
    WHILE   décalage et aller à l'état 48
    NOT     décalage et aller à l'état 49
    MOINS   décalage et aller à l'état 50

    $défaut  réduction par utilisation de la règle 18 (block)

    pv     aller à l'état 54
    inst   aller à l'état 76
    ao     aller à l'état 56
    aff    aller à l'état 57
    ret    aller à l'état 58
    cond   aller à l'état 59
    if     aller à l'état 60
    loop   aller à l'état 61
    while  aller à l'état 62
    exp    aller à l'état 63
    app    aller à l'état 64
    fid    aller à l'état 65


État 54

   38 inst: pv •

    $défaut  réduction par utilisation de la règle 38 (inst)


État 55

   30 inst_list: inst •

    $défaut  réduction par utilisation de la règle 30 (inst_list)


État 56

   32 inst: ao • block af

    $défaut  réduction par utilisation de la règle 17 (@1)

    block  aller à l'état 77
    @1     aller à l'état 32


État 57

   34 inst: aff • pv

    PV  décalage et aller à l'état 45

    pv  aller à l'état 78


État 58

   35 inst: ret • pv

    PV  décalage et aller à l'état 45

    pv  aller à l'état 79


État 59

   36 inst: cond •

    $défaut  réduction par utilisation de la règle 36 (inst)


État 60

   45 cond: if • bool_cond $@2 inst elsop

    PO  décalage et aller à l'état 80

    bool_cond  aller à l'état 81


État 61

   37 inst: loop •

    $défaut  réduction par utilisation de la règle 37 (inst)


État 62

   53 loop: while • while_cond $@4 inst

    PO  décalage et aller à l'état 82

    while_cond  aller à l'état 83


État 63

   33 inst: exp • pv
   57 exp: exp • PLUS exp
   58    | exp • MOINS exp
   59    | exp • STAR exp
   60    | exp • DIV exp
   67    | exp • INF exp
   68    | exp • SUP exp
   69    | exp • EQUAL exp
   70    | exp • DIFF exp
   71    | exp • AND exp
   72    | exp • OR exp

    PV     décalage et aller à l'état 45
    AND    décalage et aller à l'état 84
    OR     décalage et aller à l'état 85
    DIFF   décalage et aller à l'état 86
    EQUAL  décalage et aller à l'état 87
    SUP    décalage et aller à l'état 88
    INF    décalage et aller à l'état 89
    PLUS   décalage et aller à l'état 90
    MOINS  décalage et aller à l'état 91
    STAR   décalage et aller à l'état 92
    DIV    décalage et aller à l'état 93

    pv  aller à l'état 94


État 64

   63 exp: app •

    $défaut  réduction par utilisation de la règle 63 (exp)


État 65

   73 app: fid • PO args PF

    PO  décalage et aller à l'état 95


État 66

   11 params: type ID vir params •

    $défaut  réduction par utilisation de la règle 11 (params)


État 67

   41 aff: ID EQ • exp

    NUM    décalage et aller à l'état 40
    DEC    décalage et aller à l'état 41
    ID     décalage et aller à l'état 68
    PO     décalage et aller à l'état 44
    NOT    décalage et aller à l'état 49
    MOINS  décalage et aller à l'état 50

    exp  aller à l'état 96
    app  aller à l'état 64
    fid  aller à l'état 65


État 68

   62 exp: ID •
   74 fid: ID •

    PO       réduction par utilisation de la règle 74 (fid)
    $défaut  réduction par utilisation de la règle 62 (exp)


État 69

   57 exp: exp • PLUS exp
   58    | exp • MOINS exp
   59    | exp • STAR exp
   60    | exp • DIV exp
   61    | PO exp • PF
   67    | exp • INF exp
   68    | exp • SUP exp
   69    | exp • EQUAL exp
   70    | exp • DIFF exp
   71    | exp • AND exp
   72    | exp • OR exp

    PF     décalage et aller à l'état 97
    AND    décalage et aller à l'état 84
    OR     décalage et aller à l'état 85
    DIFF   décalage et aller à l'état 86
    EQUAL  décalage et aller à l'état 87
    SUP    décalage et aller à l'état 88
    INF    décalage et aller à l'état 89
    PLUS   décalage et aller à l'état 90
    MOINS  décalage et aller à l'état 91
    STAR   décalage et aller à l'état 92
    DIV    décalage et aller à l'état 93


État 70

   43 ret: RETURN PO • PF
   61 exp: PO • exp PF

    NUM    décalage et aller à l'état 40
    DEC    décalage et aller à l'état 41
    ID     décalage et aller à l'état 68
    PO     décalage et aller à l'état 44
    PF     décalage et aller à l'état 98
    NOT    décalage et aller à l'état 49
    MOINS  décalage et aller à l'état 50

    exp  aller à l'état 69
    app  aller à l'état 64
    fid  aller à l'état 65


État 71

   42 ret: RETURN exp •
   57 exp: exp • PLUS exp
   58    | exp • MOINS exp
   59    | exp • STAR exp
   60    | exp • DIV exp
   67    | exp • INF exp
   68    | exp • SUP exp
   69    | exp • EQUAL exp
   70    | exp • DIFF exp
   71    | exp • AND exp
   72    | exp • OR exp

    AND    décalage et aller à l'état 84
    OR     décalage et aller à l'état 85
    DIFF   décalage et aller à l'état 86
    EQUAL  décalage et aller à l'état 87
    SUP    décalage et aller à l'état 88
    INF    décalage et aller à l'état 89
    PLUS   décalage et aller à l'état 90
    MOINS  décalage et aller à l'état 91
    STAR   décalage et aller à l'état 92
    DIV    décalage et aller à l'état 93

    $défaut  réduction par utilisation de la règle 42 (ret)


État 72

   57 exp: exp • PLUS exp
   58    | exp • MOINS exp
   59    | exp • STAR exp
   60    | exp • DIV exp
   66    | NOT exp •
   67    | exp • INF exp
   68    | exp • SUP exp
   69    | exp • EQUAL exp
   70    | exp • DIFF exp
   71    | exp • AND exp
   72    | exp • OR exp

    $défaut  réduction par utilisation de la règle 66 (exp)


État 73

   56 exp: MOINS exp •
   57    | exp • PLUS exp
   58    | exp • MOINS exp
   59    | exp • STAR exp
   60    | exp • DIV exp
   67    | exp • INF exp
   68    | exp • SUP exp
   69    | exp • EQUAL exp
   70    | exp • DIFF exp
   71    | exp • AND exp
   72    | exp • OR exp

    $défaut  réduction par utilisation de la règle 56 (exp)


État 74

   19 decl_list: decl_list decl PV •

    $défaut  réduction par utilisation de la règle 19 (decl_list)


État 75

   24 vlist: ID •

    $défaut  réduction par utilisation de la règle 24 (vlist)


État 76

   29 inst_list: inst_list inst •

    $défaut  réduction par utilisation de la règle 29 (inst_list)


État 77

   32 inst: ao block • af

    AF  décalage et aller à l'état 99

    af  aller à l'état 100


État 78

   34 inst: aff pv •

    $défaut  réduction par utilisation de la règle 34 (inst)


État 79

   35 inst: ret pv •

    $défaut  réduction par utilisation de la règle 35 (inst)


État 80

   49 bool_cond: PO • exp PF

    NUM    décalage et aller à l'état 40
    DEC    décalage et aller à l'état 41
    ID     décalage et aller à l'état 68
    PO     décalage et aller à l'état 44
    NOT    décalage et aller à l'état 49
    MOINS  décalage et aller à l'état 50

    exp  aller à l'état 101
    app  aller à l'état 64
    fid  aller à l'état 65


État 81

   45 cond: if bool_cond • $@2 inst elsop

    $défaut  réduction par utilisation de la règle 44 ($@2)

    $@2  aller à l'état 102


État 82

   54 while_cond: PO • exp PF

    NUM    décalage et aller à l'état 40
    DEC    décalage et aller à l'état 41
    ID     décalage et aller à l'état 68
    PO     décalage et aller à l'état 44
    NOT    décalage et aller à l'état 49
    MOINS  décalage et aller à l'état 50

    exp  aller à l'état 103
    app  aller à l'état 64
    fid  aller à l'état 65


État 83

   53 loop: while while_cond • $@4 inst

    $défaut  réduction par utilisation de la règle 52 ($@4)

    $@4  aller à l'état 104


État 84

   71 exp: exp AND • exp

    NUM    décalage et aller à l'état 40
    DEC    décalage et aller à l'état 41
    ID     décalage et aller à l'état 68
    PO     décalage et aller à l'état 44
    NOT    décalage et aller à l'état 49
    MOINS  décalage et aller à l'état 50

    exp  aller à l'état 105
    app  aller à l'état 64
    fid  aller à l'état 65


État 85

   72 exp: exp OR • exp

    NUM    décalage et aller à l'état 40
    DEC    décalage et aller à l'état 41
    ID     décalage et aller à l'état 68
    PO     décalage et aller à l'état 44
    NOT    décalage et aller à l'état 49
    MOINS  décalage et aller à l'état 50

    exp  aller à l'état 106
    app  aller à l'état 64
    fid  aller à l'état 65


État 86

   70 exp: exp DIFF • exp

    NUM    décalage et aller à l'état 40
    DEC    décalage et aller à l'état 41
    ID     décalage et aller à l'état 68
    PO     décalage et aller à l'état 44
    NOT    décalage et aller à l'état 49
    MOINS  décalage et aller à l'état 50

    exp  aller à l'état 107
    app  aller à l'état 64
    fid  aller à l'état 65


État 87

   69 exp: exp EQUAL • exp

    NUM    décalage et aller à l'état 40
    DEC    décalage et aller à l'état 41
    ID     décalage et aller à l'état 68
    PO     décalage et aller à l'état 44
    NOT    décalage et aller à l'état 49
    MOINS  décalage et aller à l'état 50

    exp  aller à l'état 108
    app  aller à l'état 64
    fid  aller à l'état 65


État 88

   68 exp: exp SUP • exp

    NUM    décalage et aller à l'état 40
    DEC    décalage et aller à l'état 41
    ID     décalage et aller à l'état 68
    PO     décalage et aller à l'état 44
    NOT    décalage et aller à l'état 49
    MOINS  décalage et aller à l'état 50

    exp  aller à l'état 109
    app  aller à l'état 64
    fid  aller à l'état 65


État 89

   67 exp: exp INF • exp

    NUM    décalage et aller à l'état 40
    DEC    décalage et aller à l'état 41
    ID     décalage et aller à l'état 68
    PO     décalage et aller à l'état 44
    NOT    décalage et aller à l'état 49
    MOINS  décalage et aller à l'état 50

    exp  aller à l'état 110
    app  aller à l'état 64
    fid  aller à l'état 65


État 90

   57 exp: exp PLUS • exp

    NUM    décalage et aller à l'état 40
    DEC    décalage et aller à l'état 41
    ID     décalage et aller à l'état 68
    PO     décalage et aller à l'état 44
    NOT    décalage et aller à l'état 49
    MOINS  décalage et aller à l'état 50

    exp  aller à l'état 111
    app  aller à l'état 64
    fid  aller à l'état 65


État 91

   58 exp: exp MOINS • exp

    NUM    décalage et aller à l'état 40
    DEC    décalage et aller à l'état 41
    ID     décalage et aller à l'état 68
    PO     décalage et aller à l'état 44
    NOT    décalage et aller à l'état 49
    MOINS  décalage et aller à l'état 50

    exp  aller à l'état 112
    app  aller à l'état 64
    fid  aller à l'état 65


État 92

   59 exp: exp STAR • exp

    NUM    décalage et aller à l'état 40
    DEC    décalage et aller à l'état 41
    ID     décalage et aller à l'état 68
    PO     décalage et aller à l'état 44
    NOT    décalage et aller à l'état 49
    MOINS  décalage et aller à l'état 50

    exp  aller à l'état 113
    app  aller à l'état 64
    fid  aller à l'état 65


État 93

   60 exp: exp DIV • exp

    NUM    décalage et aller à l'état 40
    DEC    décalage et aller à l'état 41
    ID     décalage et aller à l'état 68
    PO     décalage et aller à l'état 44
    NOT    décalage et aller à l'état 49
    MOINS  décalage et aller à l'état 50

    exp  aller à l'état 114
    app  aller à l'état 64
    fid  aller à l'état 65


État 94

   33 inst: exp pv •

    $défaut  réduction par utilisation de la règle 33 (inst)


État 95

   73 app: fid PO • args PF

    NUM    décalage et aller à l'état 40
    DEC    décalage et aller à l'état 41
    ID     décalage et aller à l'état 68
    PO     décalage et aller à l'état 44
    NOT    décalage et aller à l'état 49
    MOINS  décalage et aller à l'état 50

    $défaut  réduction par utilisation de la règle 76 (args)

    exp      aller à l'état 115
    app      aller à l'état 64
    fid      aller à l'état 65
    args     aller à l'état 116
    arglist  aller à l'état 117


État 96

   41 aff: ID EQ exp •
   57 exp: exp • PLUS exp
   58    | exp • MOINS exp
   59    | exp • STAR exp
   60    | exp • DIV exp
   67    | exp • INF exp
   68    | exp • SUP exp
   69    | exp • EQUAL exp
   70    | exp • DIFF exp
   71    | exp • AND exp
   72    | exp • OR exp

    AND    décalage et aller à l'état 84
    OR     décalage et aller à l'état 85
    DIFF   décalage et aller à l'état 86
    EQUAL  décalage et aller à l'état 87
    SUP    décalage et aller à l'état 88
    INF    décalage et aller à l'état 89
    PLUS   décalage et aller à l'état 90
    MOINS  décalage et aller à l'état 91
    STAR   décalage et aller à l'état 92
    DIV    décalage et aller à l'état 93

    $défaut  réduction par utilisation de la règle 41 (aff)


État 97

   61 exp: PO exp PF •

    $défaut  réduction par utilisation de la règle 61 (exp)


État 98

   43 ret: RETURN PO PF •

    $défaut  réduction par utilisation de la règle 43 (ret)


État 99

   40 af: AF •

    $défaut  réduction par utilisation de la règle 40 (af)


État 100

   32 inst: ao block af •

    $défaut  réduction par utilisation de la règle 32 (inst)


État 101

   49 bool_cond: PO exp • PF
   57 exp: exp • PLUS exp
   58    | exp • MOINS exp
   59    | exp • STAR exp
   60    | exp • DIV exp
   67    | exp • INF exp
   68    | exp • SUP exp
   69    | exp • EQUAL exp
   70    | exp • DIFF exp
   71    | exp • AND exp
   72    | exp • OR exp

    PF     décalage et aller à l'état 118
    AND    décalage et aller à l'état 84
    OR     décalage et aller à l'état 85
    DIFF   décalage et aller à l'état 86
    EQUAL  décalage et aller à l'état 87
    SUP    décalage et aller à l'état 88
    INF    décalage et aller à l'état 89
    PLUS   décalage et aller à l'état 90
    MOINS  décalage et aller à l'état 91
    STAR   décalage et aller à l'état 92
    DIV    décalage et aller à l'état 93


État 102

   45 cond: if bool_cond $@2 • inst elsop

    NUM     décalage et aller à l'état 40
    DEC     décalage et aller à l'état 41
    ID      décalage et aller à l'état 42
    AO      décalage et aller à l'état 43
    PO      décalage et aller à l'état 44
    PV      décalage et aller à l'état 45
    RETURN  décalage et aller à l'état 46
    IF      décalage et aller à l'état 47
    WHILE   décalage et aller à l'état 48
    NOT     décalage et aller à l'état 49
    MOINS   décalage et aller à l'état 50

    pv     aller à l'état 54
    inst   aller à l'état 119
    ao     aller à l'état 56
    aff    aller à l'état 57
    ret    aller à l'état 58
    cond   aller à l'état 59
    if     aller à l'état 60
    loop   aller à l'état 61
    while  aller à l'état 62
    exp    aller à l'état 63
    app    aller à l'état 64
    fid    aller à l'état 65


État 103

   54 while_cond: PO exp • PF
   57 exp: exp • PLUS exp
   58    | exp • MOINS exp
   59    | exp • STAR exp
   60    | exp • DIV exp
   67    | exp • INF exp
   68    | exp • SUP exp
   69    | exp • EQUAL exp
   70    | exp • DIFF exp
   71    | exp • AND exp
   72    | exp • OR exp

    PF     décalage et aller à l'état 120
    AND    décalage et aller à l'état 84
    OR     décalage et aller à l'état 85
    DIFF   décalage et aller à l'état 86
    EQUAL  décalage et aller à l'état 87
    SUP    décalage et aller à l'état 88
    INF    décalage et aller à l'état 89
    PLUS   décalage et aller à l'état 90
    MOINS  décalage et aller à l'état 91
    STAR   décalage et aller à l'état 92
    DIV    décalage et aller à l'état 93


État 104

   53 loop: while while_cond $@4 • inst

    NUM     décalage et aller à l'état 40
    DEC     décalage et aller à l'état 41
    ID      décalage et aller à l'état 42
    AO      décalage et aller à l'état 43
    PO      décalage et aller à l'état 44
    PV      décalage et aller à l'état 45
    RETURN  décalage et aller à l'état 46
    IF      décalage et aller à l'état 47
    WHILE   décalage et aller à l'état 48
    NOT     décalage et aller à l'état 49
    MOINS   décalage et aller à l'état 50

    pv     aller à l'état 54
    inst   aller à l'état 121
    ao     aller à l'état 56
    aff    aller à l'état 57
    ret    aller à l'état 58
    cond   aller à l'état 59
    if     aller à l'état 60
    loop   aller à l'état 61
    while  aller à l'état 62
    exp    aller à l'état 63
    app    aller à l'état 64
    fid    aller à l'état 65


État 105

   57 exp: exp • PLUS exp
   58    | exp • MOINS exp
   59    | exp • STAR exp
   60    | exp • DIV exp
   67    | exp • INF exp
   68    | exp • SUP exp
   69    | exp • EQUAL exp
   70    | exp • DIFF exp
   71    | exp • AND exp
   71    | exp AND exp •
   72    | exp • OR exp

    DIFF   décalage et aller à l'état 86
    EQUAL  décalage et aller à l'état 87
    SUP    décalage et aller à l'état 88
    INF    décalage et aller à l'état 89
    PLUS   décalage et aller à l'état 90
    MOINS  décalage et aller à l'état 91
    STAR   décalage et aller à l'état 92
    DIV    décalage et aller à l'état 93

    $défaut  réduction par utilisation de la règle 71 (exp)


État 106
